--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "django-allauth-ui>=1.5.0",
     "django-allauth>=65.0.2",
+    "django-import-export>=4.2.0",
     "django-unfold>=0.40.0",
     "django-widget-tweaks>=1.5.0",
     "django>=5.1.2",
