--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,13 @@ description = "VUJudge is an online judge platform developed for the Varendra Un
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "django>=5.1.4",
     "django-allauth>=65.0.2",
     "django-import-export>=4.2.0",
     "django-unfold>=0.40.0",
-    "django>=5.1.2",
     "httpx>=0.27.2",
     "icecream>=2.1.3",
+    "python-decouple>=3.8",
 ]
 
 [tool.uv]
